--- a/.github/workflows/update_mapping.yaml
+++ b/.github/workflows/update_mapping.yaml
@@ -14,12 +14,11 @@ jobs:
 
     steps:
       - name: Check out xjoin-config
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Check out schema repo to copy current schema from
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: RedHatInsights/inventory-schemas
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           path: ./inventory-schemas
       - name: Set vars
         id: vars
@@ -29,16 +28,21 @@ jobs:
           echo "::set-output name=schema_sha::$(git ls-remote https://github.com/RedHatInsights/inventory-schemas.git master | cut -c -7)"
       - name: update mapping from schema
         run: |
+          pwd
+          ls -l
           cd scripts
+          pwd
           npm ci
-          node update_mapping.js ../inventory-schemas/schemas/system_profile/v1.yaml
+          node update_mapping.js
+          git diff
           git add -u
           git commit -m "update mapping ${{ steps.vars.outputs.schema_sha }}"
       - name: remove schema submodule
         run: rm -r inventory-schemas
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
+        uses: peter-evans/create-pull-request@v5
         with:
+          base: master
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           committer: GitHub <noreply@github.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
@@ -48,4 +52,4 @@ jobs:
           delete-branch: true
           title: '[Automated] Update mapping'
           body: |
-            Updated the mapping based on the latest inventory-schemas change
+            Updated xjoin-operator to support the latest inventory-schemas change
